# AlignScore

./: LICENSE  README.md  baselines.py  benchmark.py  evaluate.py  flan_prompts.py  generate_training_data.py  pyproject.toml  requirements.txt  train.py
