[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alignscore"
version = "0.1.3"
authors = [
    { name = "Yuheng Zha", email = "yzha@ucsd.edu" },
    { name = "Yichi Yang", email = "yiy067@ucsd.edu" },
    { name = "Ruichen Li", email = "rul014@ucsd.edu" },
    { name = "Zhiting Hu", email = "zhh019@ucsd.edu" },
]
description = "An automatic factual consistency evaluation metric based on a unifined alignment function"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "spacy>=3.4.0,<4",
    "nltk>=3.7,<4",
    "torch>=1.12.1,<2",
    "transformers>=4.20.1,<5",
    "tqdm>=4.64.0,<5",
    "jsonlines>=2.0.0,<3",
    "numpy>=1.23.1,<2",
    "datasets>=2.3.2,<3",
    "scikit-learn>=1.1.2,<2",
    "pytorch_lightning>=1.7.7,<2",
    "scipy>=1.8.1,<2",
    "tensorboard>=2.12.0,<3",
    "protobuf<=3.20"
]

[project.urls]
"Homepage" = "https://github.com/yuh-zha/AlignScore"
"Bug Tracker" = "https://github.com/yuh-zha/AlignScore/issues"
